--- a/PrismDeNwnpOnTab/PrismDeNwnpOnTab/Views/SecondPage.xaml
+++ b/PrismDeNwnpOnTab/PrismDeNwnpOnTab/Views/SecondPage.xaml
@@ -3,13 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms"
              prism:ViewModelLocator.AutowireViewModel="True"
-             x:Class="PrismDeNwnpOnTab.Views.MainPage"
-             Title="MainPage">
+             x:Class="PrismDeNwnpOnTab.Views.SecondPage"
+             Title="SecondPage">
   
   <StackLayout HorizontalOptions="Center" VerticalOptions="Center">
-    <Label Text="（ナビページなし）" />
-    <Label Text="メインページです" />
-    <Button Text="サブページへ" Command="{Binding GoSubCommand}" />
-  </StackLayout>
-  
+    <Label Text="２ページです" />
+  </StackLayout>  
+
 </ContentPage>
